New in 1.2:

* Correctly linking librdslwp from the lwp compiled objects.

New in 1.1:

* Fixed the RVM_EOFFSET bug.

New in 1.0:

* Fixed alignment problems on sparc32 platforms (Shafeeq).
* Extracted RVM out of the main Coda source tree.
* Using an automake/autoconf/libtool build environment.
* Creating shared libraries.
* Fixed some bugs in the testprograms.
* Reduced rvm locking overhead by about 50%.